--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 :root {
-  --color-primary-50: #f0fdf4;
+  /* --color-primary-50: #f0fdf4;
   --color-primary-100: #dcfce7;
   --color-primary-200: #bbf7d0;
   --color-primary-300: #86efac;
@@ -14,13 +14,14 @@
   --color-primary-700: #15803d;
   --color-primary-800: #166534;
   --color-primary-900: #14532d;
-  --color-primary-950: #052e16;
+  --color-primary-950: #052e16; */
 
   --green: #16a34a;
-  --dark-green: #15803d;
-  --light-green: #2ecc71;
+  --dark-green: #14532d;
+  --light-green: #24f67b;
+  --lighter-green: #bbf7d0;
   --dark-text: #212121;
-  --light-gray: #f4f4f5;
+  --light-gray: #e4e4e4;
   --light-gray-bg: #ffffff34;
   --white: #ffffff;
   --gray-text: #989fad;
@@ -68,11 +69,11 @@ button {
   border: none;
 }
 
-/* #app {
+#app {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-} */
+}
 
 main {
   flex-grow: 1;
@@ -84,6 +85,20 @@ main {
   margin-right: auto;
   padding-left: 1.5rem;
   padding-right: 1.5rem;
+}
+
+@media (min-width: 1024px) {
+  /* lg */
+  .container {
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px) {
+  /* xl */
+  .container {
+    max-width: 1280px;
+  }
 }
 
 .flex {
@@ -98,10 +113,6 @@ main {
   display: none;
 }
 
-.block {
-  display: block;
-}
-
 /* ------------------- */
 /* Reusable Components */
 /* ------------------- */
@@ -110,6 +121,7 @@ main {
   padding: 0.75rem 1.5rem;
   border-radius: 5px;
   transition: all 0.3s ease;
+  font-size: 1.4rem;
 }
 
 .btn-primary {
@@ -119,7 +131,7 @@ main {
 
 .btn-primary:hover {
   background-color: var(--dark-green);
-  transform: scale(1.05);
+  transform: scale(1.02);
 }
 
 .btn-secondary {
@@ -132,11 +144,49 @@ main {
   border-radius: 0.375rem;
 }
 
+.section-heading {
+  font-size: 2rem;
+}
+
 .sub-heading {
   text-transform: uppercase;
   color: var(--green);
   font-weight: 600;
   font-size: 0.8rem;
+  margin: 0.5rem 0;
+}
+
+p {
+  font-size: 1rem;
+}
+
+h3 {
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+
+@media screen and (min-width: 768px) {
+  .section-heading {
+    font-size: 2.5rem;
+  }
+
+  .sub-heading {
+    font-size: 1rem;
+  }
+
+  p {
+    font-size: 1.1rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .sub-heading {
+    font-size: 1.3rem;
+  }
+}
+
+.site-logo {
+  height: 2rem;
 }
 
 /* 
@@ -168,13 +218,6 @@ main {
   z-index: 1000;
 }
 
-.header .logo {
-  font-size: 1.5rem;
-  font-weight: 700;
-  color: var(--dark-text);
-  cursor: pointer;
-}
-
 .nav-content {
   display: flex;
   justify-content: space-between;
@@ -183,7 +226,7 @@ main {
 }
 
 .nav-links a {
-  margin-left: 2rem;
+  margin-left: 1.2rem;
   font-weight: 500;
   transition: color 0.3s ease;
   text-transform: uppercase;
@@ -197,9 +240,11 @@ main {
   display: block;
 }
 
-.nav-links.mobile-only {
+.mobile-nav-links {
   flex-direction: column;
+  gap: 2rem;
   padding: 1rem 0;
+  align-items: center;
 }
 
 @media screen and (min-width: 768px) {
@@ -213,9 +258,165 @@ main {
 
   .nav-links .desktop-only {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
   }
 }
+
+/* ------------------- */
+/* HERO  */
+/* ------------------- */
+.hero-container {
+  gap: 1rem;
+  align-items: center;
+  flex-direction: column;
+  padding: 1rem 0;
+}
+
+.hero__heading {
+  line-height: 3rem;
+  font-size: 2.2rem;
+}
+
+.hero__description {
+  margin: 1rem 0;
+}
+
+.hero__text {
+  max-width: 85%;
+  margin: 2rem;
+  text-align: center;
+}
+
+.hero__image {
+  margin: 2rem;
+  width: 85%;
+  box-shadow: var(--shadow-md);
+}
+
+@media screen and (min-width: 768px) {
+  .hero-container {
+    gap: 2rem;
+    flex-direction: row;
+  }
+
+  .hero__text {
+    text-align: left;
+  }
+
+  .hero__heading {
+    line-height: 4rem;
+    font-size: 3.5rem;
+  }
+}
+
+/* ------------------- */
+/* STATS BAR  */
+/* ------------------- */
+
+.stats-bar-section {
+  background-color: var(--dark-green);
+}
+
+.stats-bar-grid {
+  grid-template-columns: repeat(1, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  text-align: center;
+  gap: 3rem;
+  padding: 2rem;
+}
+
+.stats-number {
+  color: var(--white);
+  font-size: 2.5rem;
+  font-weight: 700;
+}
+
+.stats-text {
+  color: var(--light-green);
+  font-size: 1rem;
+}
+
+@media screen and (min-width: 768px) {
+  .stats-bar-grid {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
+}
+
+@media (min-width: 1024px) {
+  .stats-bar-grid {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+  }
+}
+
+/* ------------------- */
+/* SERVICES  */
+/* ------------------- */
+.services-section {
+  background-color: var(--light-gray);
+}
+
+.services-container {
+  padding: 3rem 1rem;
+  margin: 0 auto;
+  gap: 2rem;
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.service-section__image {
+  justify-content: center;
+}
+
+.service-section__image img {
+  max-width: 100%;
+  box-shadow: var(--shadow-lg);
+}
+
+.service-item {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  margin: 1rem 0;
+}
+
+.icon-container {
+  background-color: var(--lighter-green);
+  display: inline-block;
+  height: 2.5rem;
+  width: 2.5rem;
+  align-items: center;
+  padding: 0.5rem;
+  border-radius: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .services-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (min-width: 1024px) {
+}
+
+/* ------------------- */
+/* FOOTER  */
+/* ------------------- */
+@media screen and (min-width: 768px) {
+}
+
+@media (min-width: 1024px) {
+}
+
+/* ------------------- */
+/* FOOTER  */
+/* ------------------- */
+@media screen and (min-width: 768px) {
+}
+
+@media (min-width: 1024px) {
+}
+
 /* ------------------- */
 /* FOOTER  */
 /* ------------------- */
