created the home page layout

--- a/src/index.css
+++ b/src/index.css
@@ -157,7 +157,8 @@ main {
 }
 
 .section-heading {
-  font-size: 2rem;
+  font-size: 1.7rem;
+  line-height: 2.5rem;
 }
 
 .sub-heading {
@@ -198,26 +199,20 @@ h3 {
 }
 
 .site-logo {
-  height: 2rem;
+  height: 1.5rem;
 }
 
-/* 
-.section-header {
-  text-align: center;
-  margin-bottom: 4rem;
+@media screen and (min-width: 768px) {
+  .site-logo {
+    height: 2rem;
+  }
 }
-.section-title {
-  font-size: 2.25rem;
-  font-weight: 700;
-  color: var(--dark-text);
+
+@media (min-width: 1024px) {
+  .site-logo {
+    height: 2.5rem;
+  }
 }
-.section-subtitle {
-  color: var(--dark-text);
-  margin-top: 0.5rem;
-  font-size: 1.125rem;
-  font-weight: 600;
-  text-transform: uppercase;
-} */
 
 /* ------------------- */
 /* HEADER  */
@@ -453,10 +448,46 @@ h3 {
 }
 
 /* ------------------- */
+/* CTA  */
+/* ------------------- */
+
+.cta-container {
+  background-color: var(--green);
+  padding: 2.5rem 0.5rem;
+  margin: 0 auto;
+  max-width: 90%;
+  border-radius: 1rem 1rem 0rem 0rem;
+  box-shadow: var(--shadow-lg);
+}
+
+.cta-container .section-heading {
+  color: var(--white);
+  line-height: 2rem;
+}
+
+.cta-container a {
+  color: var(--green);
+  font-weight: 500;
+  background-color: var(--white);
+  padding: 0.7rem 1.5rem;
+}
+
+.cta-container p {
+  color: var(--white);
+  margin: 1rem 1rem 2rem 1rem;
+}
+
+@media screen and (min-width: 768px) {
+}
+
+@media (min-width: 1024px) {
+}
+
+/* ------------------- */
 /* FOOTER  */
 /* ------------------- */
 .footer-section {
-  padding: 4rem 1rem;
+  padding: 3rem 1rem 1rem 1rem;
   background-color: var(--dark-text);
   color: var(--white);
 }
@@ -468,7 +499,33 @@ h3 {
 
 .footer-content {
   gap: 3rem;
+  margin-bottom: 5rem;
   grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.footer-copyright {
+  padding-top: 1.5rem;
+  border-top: 1px solid var(--gray-text);
+  border-radius: 100%;
+}
+
+.footer-about {
+  flex-direction: column;
+  row-gap: 1rem;
+}
+
+.footer-items {
+  margin-top: 0.5rem;
+}
+
+.footer-items h5 {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.footer-items .footer-list {
+  flex-direction: column;
+  row-gap: 1rem;
 }
 
 .footer-section a {
